ubiquity (1.99.7) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * mythbuntu_ui:
    - Hide step_label during the last step just prior to reboot. (LP: #412823)

  [ Colin Watson ]
  * Upgrade to debhelper v7. There's still some fairly significant ugliness
    in our debian/rules, but this is a slight improvement.

  [ Michael Terry ]
  * kde: Enable timezone translation
  * gtk: Remove separators from dialogs
  * gtk: Convert glade files to GtkBuilder files (LP: #403542), which required
    a minimum gtk+ version bump to 2.12
  * Add menu icons for oem-config-prepare*.desktop (LP: #412832)

  [ Harald Sitter ]
  * Install the KDE desktop file to applications/kde4/ to prevent it from showing
    up as KDE 3 application in KRunner (happens when stored in applications/kde/)

 -- Michael Terry <michael.terry@canonical.com>  Fri, 14 Aug 2009 11:17:48 -0400

ubiquity (1.99.6) karmic; urgency=low

  [ Michael Terry ]
  * kde: Fix crash in timezone map when default country is US or Canada,
    broken by recent translation support. (LP: #412589)

  [ Evan Dandrea ]
  * 'as' is not supported in Python 2.5.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 12 Aug 2009 17:13:39 +0100

ubiquity (1.99.5) karmic; urgency=low

  [ Mario Limonciello ]
  * When performing a Mythbuntu install w/ NVIDIA graphics, don't use the xorg
    conf from the livefs as a base as it's nonexistent now. (LP: #411221)
  * Properly process the output of apt-cache when pkgsel/language-packs is
    preseeded to ALL.
  * Automatic update of included source packages: grub-installer
    1.40ubuntu2, hw-detect 1.72ubuntu3.

  [ Michael Terry ]
  * Sort language list with pyicu
  * gtk: Translate timezones with pyicu

 -- Mario Limonciello <superm1@ubuntu.com>  Tue, 11 Aug 2009 10:13:55 -0500

ubiquity (1.99.4) karmic; urgency=low

  [ Evan Dandrea ]
  * Correct erroneously inverted test for the slideshow slides.  Thanks
    Roman Shtylman.

  [ Roman Shtylman ]