@@ -84,6 +84,14 @@
       </row>
     </data>
   </object>
+  <object class="GtkListStore" id="model3">
+    <columns>
+      <!-- column-name gchararray -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+    </data>
+  </object>
   <object class="GtkVBox" id="mythbuntu_stepDrivers">
     <property name="visible">True</property>
     <property name="border_width">6</property>
@@ -161,6 +169,14 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="active">1</property>
                     <signal name="changed" handler="video_changed"/>
+                    <property name="model">model3</property>
+                    <property name="active">1</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="renderer1"/>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
