@@ -3,6 +3,8 @@ ubiquity (1.99.7) UNRELEASED; urgency=low
   [ Mario Limonciello ]
   * mythbuntu_ui:
     - Hide step_label during the last step just prior to reboot. (LP: #412823)
+    - Add a GtkCellRendererText and ListStore to drivers step.  The previous
+      conversion from glade->gtkbuilder appears to have not done for us.
 
   [ Colin Watson ]
   * Upgrade to debhelper v7. There's still some fairly significant ugliness
